# modelcase-backend

./: .flaskenv  .gitignore  .pylintrc  README.md  build.spec  pyproject.toml  run.py  version.txt
.github/workflows/: release.yml
app/: __init__.py
app/core/: db.py  error.py  redprint.py
app/dao/: user.py
app/models/: user.py
app/routes/: user.py
app/routes/v1/: user.py
config/: local_secure.py  secure.py  setting.py  utils.py
resources/: versionInfo.py
